--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,31 @@ obj/Debug/net8.0/HelloWorld.assets.cache
 obj/Debug/net8.0/HelloWorld.csproj.AssemblyReference.cache
 obj/Debug/net8.0/HelloWorld.GeneratedMSBuildEditorConfig.editorconfig
 obj/Debug/net8.0/HelloWorld.GlobalUsings.g.cs
+bin/Debug/net8.0/appsettings.Development.json
+bin/Debug/net8.0/appsettings.json
+bin/Debug/net8.0/HelloWorld.deps.json
+bin/Debug/net8.0/HelloWorld.dll
+bin/Debug/net8.0/HelloWorld.exe
+bin/Debug/net8.0/HelloWorld.pdb
+bin/Debug/net8.0/HelloWorld.runtimeconfig.json
+bin/Debug/net8.0/Microsoft.AspNetCore.OpenApi.dll
+bin/Debug/net8.0/Microsoft.OpenApi.dll
+bin/Debug/net8.0/Swashbuckle.AspNetCore.Swagger.dll
+bin/Debug/net8.0/Swashbuckle.AspNetCore.SwaggerGen.dll
+bin/Debug/net8.0/Swashbuckle.AspNetCore.SwaggerUI.dll
+obj/Debug/net8.0/apphost.exe
+obj/Debug/net8.0/HelloWorld.csproj.CoreCompileInputs.cache
+obj/Debug/net8.0/HelloWorld.csproj.FileListAbsolute.txt
+obj/Debug/net8.0/HelloWorld.csproj.Up2Date
+obj/Debug/net8.0/HelloWorld.dll
+obj/Debug/net8.0/HelloWorld.genruntimeconfig.cache
+obj/Debug/net8.0/HelloWorld.MvcApplicationPartsAssemblyInfo.cache
+obj/Debug/net8.0/HelloWorld.MvcApplicationPartsAssemblyInfo.cs
+obj/Debug/net8.0/HelloWorld.pdb
+obj/Debug/net8.0/HelloWorld.sourcelink.json
+obj/Debug/net8.0/staticwebassets.build.json
+obj/Debug/net8.0/ref/HelloWorld.dll
+obj/Debug/net8.0/refint/HelloWorld.dll
+obj/Debug/net8.0/staticwebassets/msbuild.build.HelloWorld.props
+obj/Debug/net8.0/staticwebassets/msbuild.buildMultiTargeting.HelloWorld.props
+obj/Debug/net8.0/staticwebassets/msbuild.buildTransitive.HelloWorld.props
